Actualizada Explicacion Practica 1

--- a/Practica1/explicacion.tex
+++ b/Practica1/explicacion.tex
@@ -42,103 +42,103 @@
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-1.png}
+\includegraphics[scale=0.70]{imgs/imagen_001.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-2.png}
+\includegraphics[scale=0.70]{imgs/imagen_002.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-3.png}
+\includegraphics[scale=0.70]{imgs/imagen_003.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-4.png}
+\includegraphics[scale=0.70]{imgs/imagen_004.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-5.png}
+\includegraphics[scale=0.70]{imgs/imagen_005.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-6.png}
+\includegraphics[scale=0.70]{imgs/imagen_006.png}
 \end{frame}
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-7.png}
+\includegraphics[scale=0.70]{imgs/imagen_007.png}
 \end{frame}
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-8.png}
+\includegraphics[scale=0.70]{imgs/imagen_008.png}
+\end{frame}
+\begin{frame}
+  \frametitle{Subrutinas}
+\includegraphics[scale=0.70]{imgs/imagen_009.png}
 \end{frame}
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-9.png}
-\end{frame}
-\begin{frame}
-\frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-10.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-11.png}
+\includegraphics[scale=0.70]{imgs/imagen_010.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-12.png}
+\includegraphics[scale=0.70]{imgs/imagen_011.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-13.png}
+\includegraphics[scale=0.70]{imgs/imagen_012.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-14.png}
+\includegraphics[scale=0.70]{imgs/imagen_013.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-15.png}
+\includegraphics[scale=0.70]{imgs/imagen_014.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-16.png}
+\includegraphics[scale=0.70]{imgs/imagen_015.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-17.png}
+\includegraphics[scale=0.70]{imgs/imagen_016.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-18.png}
+\includegraphics[scale=0.70]{imgs/imagen_017.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-19.png}
+\includegraphics[scale=0.70]{imgs/imagen_018.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-20.png}
+\includegraphics[scale=0.70]{imgs/imagen_019.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/programa-21.png}
+\includegraphics[scale=0.70]{imgs/imagen_020.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Subrutinas}
+\includegraphics[scale=0.70]{imgs/imagen_021.png}
 \end{frame}
 
 
