--- a/Practica2/explicacion.tex
+++ b/Practica2/explicacion.tex
@@ -72,7 +72,7 @@
  \item Interrupciones por Hardware
  \begin{itemize}
    \item Pedidos de Interrupcion: Son generadas por dispositivos de Entrada / Salida
-   \item Traps: Interrpciones creadas por el procesador en respuesta a ciertos eventos (ej. división por cero)
+   \item Traps: Interrupciones creadas por el procesador en respuesta a ciertos eventos (ej. división por cero)
  \end{itemize}
  \end{itemize}
  \end{itemize}
