Algunos errores corregigos

--- a/Practica4/Parte1/explicacion.tex
+++ b/Practica4/Parte1/explicacion.tex
@@ -289,7 +289,7 @@ Notar que todas las instrucciones finalizan con \emph{I}.
 \frametitle{Instrucciones manipulación de Registros}
 \begin{itemize}
 \item \emph{DADD r1, r2, r3}: Suma $r2 + r3$ y lo guarda en $r1$
-\item \emph{DSUB r10, r12, r13}: Resta $r12 + r13$ y lo guarda en $r10$
+\item \emph{DSUB r10, r12, r13}: Resta $r12 - r13$ y lo guarda en $r10$
 \item \emph{AND r8, r10, r11}: Hace la operación AND entre  $r10$ y $11$ y lo guarda en $r8$
 \item \emph{OR r3, r11, r13}: Hace la operación OR entre  $r11$ y $r13$ y lo guarda en $r3$
 \item \emph{XOR r1, r20, r1}: Hace la operación XOR entre  $r20$ y $r1$ y lo guarda en $r1$
