--- a/Practica4/Parte2/explicacion.tex
+++ b/Practica4/Parte2/explicacion.tex
@@ -356,7 +356,7 @@ Existe una Penalización por salto, ya que se empieza a analizar la instrucción
 \item Incondicional: La dirección de destino se debe determinar lo más pronto posible, dentro del cauce, para reducir la penalización.
 \item Condicional: Introduce riesgo adicional por la dependencia entre la condición de salto y el resultado de una instrucción previa.
 \end{itemize}
-Deberiamos encontrar alguna manera de "saber" cual es la próxima instrucción lo antes posible.
+Deberiamos encontrar alguna manera de saber cual es la próxima instrucción lo antes posible.
 \end{frame}
 
 
