Actualizada explicacion practica 1

--- a/Practica1/explicacion.tex
+++ b/Practica1/explicacion.tex
@@ -103,6 +103,11 @@
 
 \begin{frame}
 \frametitle{Subrutinas}
+\includegraphics[scale=0.70]{imgs/imagen_013_bis.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Subrutinas}
 \includegraphics[scale=0.70]{imgs/imagen_014.png}
 \end{frame}
 
