Actualizado, empezamos modificacion de la explicacion de la practica 3

--- a/Practica3/Parte3/explicacion.tex
+++ b/Practica3/Parte3/explicacion.tex
@@ -23,7 +23,7 @@
 %\usepackage{fancyvrb}
 
 
-\title{Practica 3 - Parte 2 - HAND-SHAKE}
+\title{Practica 3 - Parte 3 - USARTOB}
 %\author{Juan Antonio Zubimendi\\azubimendi@lifia.info.unlp.edu.ar}
 
 %\institute{LINSE}
