Corregido detalle en explicacion

--- a/Practica3/Parte3/explicacion.tex
+++ b/Practica3/Parte3/explicacion.tex
@@ -268,7 +268,7 @@
  \begin{itemize}
  \item Error reset (bit 6 en 1)
  \item DTR activado (bit 4 en 1)
- \item Comunicacio?n asincrona (bit 0 en 1)
+ \item Comunicacioón asincrona (bit 0 en 1)
 \end{itemize}
 \end{itemize}
 
