Agregado grafico de conexion de USART

--- a/Practica3/Parte3/explicacion.tex
+++ b/Practica3/Parte3/explicacion.tex
@@ -172,6 +172,15 @@
 \end{itemize}
 \end{frame}
 
+\subsection{Introduccion}
+\begin{frame}[fragile]
+\frametitle{Conexion USART - Impresora Serie}
+\begin{center}
+ \includegraphics[scale=1.00]{conexion_usart.png}
+\end{center}
+
+\end{frame}
+
 
 \subsection{Introduccion}
 \begin{frame}[fragile]
